Fix word wrap in displaying sent selvitys hyväksyntä

--- a/va-virkailija/web/va/style/admin.less
+++ b/va-virkailija/web/va/style/admin.less
@@ -420,7 +420,8 @@ table.translation, #haku-roles table {
   margin-top: 10px;
 
   &--sent {
-    white-space: pre;
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
     background-color: #f0f0f0;
   }
 
